@@ -1,3 +1,10 @@
+2008-05-30  Alp Toker  <alp@nuanti.com>
+
+	* src/dh-window.c: (window_activate_zoom_in),
+	(window_activate_zoom_out), (window_activate_zoom_default): Bring
+	back zoom support using the zoom-level property added in WebKit
+	r34249.
+
 2008-05-25  Richard Hult  <richard@imendio.com>
 
 	* configure.in:
